--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,113 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  font-family: "Lato", sans-serif;
+}
+
+#top-bar {
+  width: 100%;
+  height: 70px;
+  background-color: #393b40;
+}
+
+#top-bar h1 {
+  padding: 1rem 0 0 3rem;
+}
+
+#top-bar h1 a {
+  text-decoration: none;
+  color: #ffff;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background-color: #393b40;
+  width: 300px;
+  min-width: 300px;
+  border-top: 2px solid white;
+  height: calc(100vh - 70px);
+}
+
+nav ul {
+  margin-top: 5rem;
+}
+
+nav ul li {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 90%;
+  list-style-type: none;
+  margin: 1.2rem auto;
+}
+
+nav ul li a {
+  font-size: 20px;
+  text-decoration: none;
+  color: #ffff;
+}
+
+nav ul li i {
+  margin-right: 0.5rem;
+  font-size: 30px;
+  color: #ffff;
+}
+
+nav ul li #arrow-icon {
+  position: absolute;
+  font-size: 20px;
+  right: 5%;
+}
+
+.display-area {
+  width: calc(100% - 300px);
+  min-width: 400px;
+}
+
+#content-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#about-project {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  gap: 3rem;
+}
+
+#about-project h2 {
+  color: #424242;
+}
+
+#about-project p {
+  color: #424242;
+}
+/*# sourceMappingURL=main.css.map */
