--- a/styles/main.css
+++ b/styles/main.css
@@ -146,12 +146,22 @@ nav ul li .arrow-icon.on {
 .display-area {
   width: 100%;
   min-width: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #content-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
 }
 
 #about-project {
@@ -344,5 +354,44 @@ nav ul li .arrow-icon.on {
     text-align: center;
     padding: 0 1rem;
   }
+}
+
+#add-point h2 {
+  text-align: center;
+  margin-top: 3rem;
+}
+
+#add-point .point-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2rem;
+  height: 100%;
+}
+
+#add-point .point-details label {
+  font-size: 20px;
+  margin: 2rem 0;
+}
+
+#add-point .point-details input {
+  height: 30px;
+  width: 400px;
+}
+
+#add-point .point-details button#add-point {
+  margin-top: 3rem;
+  height: 30px;
+  width: 200px;
 }
 /*# sourceMappingURL=main.css.map */
