--- a/styles/main.css
+++ b/styles/main.css
@@ -146,15 +146,6 @@ nav ul li .arrow-icon.on {
 .display-area {
   width: 100%;
   min-width: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 #content-wrapper {
@@ -162,6 +153,7 @@ nav ul li .arrow-icon.on {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  height: calc(100% - 70px);
 }
 
 #about-project {
@@ -243,7 +235,6 @@ nav ul li .arrow-icon.on {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    height: calc(100% - 70px);
   }
   #content-wrapper nav {
     height: -webkit-max-content;
@@ -256,6 +247,9 @@ nav ul li .arrow-icon.on {
   }
   #content-wrapper nav ul li a {
     display: block;
+  }
+  #content-wrapper nav ul li i {
+    font-size: 12px;
   }
   #content-wrapper nav .mobile-menu {
     display: -webkit-box;
@@ -329,6 +323,48 @@ nav ul li .arrow-icon.on {
     height: 100%;
     min-width: 100%;
   }
+  #content-wrapper .display-area #azimuth,
+  #content-wrapper .display-area #distance,
+  #content-wrapper .display-area #add-point,
+  #content-wrapper .display-area #angles-calc {
+    height: auto;
+  }
+  #content-wrapper .display-area #azimuth h2,
+  #content-wrapper .display-area #distance h2,
+  #content-wrapper .display-area #add-point h2,
+  #content-wrapper .display-area #angles-calc h2 {
+    text-align: center;
+    font-size: 1.3rem;
+    margin-top: 2rem;
+    padding: 0 0.8rem;
+  }
+  #content-wrapper .display-area #azimuth button,
+  #content-wrapper .display-area #distance button,
+  #content-wrapper .display-area #add-point button,
+  #content-wrapper .display-area #angles-calc button {
+    margin-bottom: 2rem;
+  }
+  #content-wrapper .display-area #azimuth input,
+  #content-wrapper .display-area #distance input,
+  #content-wrapper .display-area #add-point input,
+  #content-wrapper .display-area #angles-calc input {
+    width: 250px;
+  }
+  #content-wrapper .display-area #azimuth .points-details,
+  #content-wrapper .display-area #distance .points-details,
+  #content-wrapper .display-area #add-point .points-details,
+  #content-wrapper .display-area #angles-calc .points-details {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #content-wrapper .display-area #azimuth .points-details .second-point-details,
+  #content-wrapper .display-area #distance .points-details .second-point-details,
+  #content-wrapper .display-area #add-point .points-details .second-point-details,
+  #content-wrapper .display-area #angles-calc .points-details .second-point-details {
+    margin-top: 3rem;
+  }
 }
 
 @media (max-width: 640px) and (max-width: 375px) {
@@ -393,5 +429,145 @@ nav ul li .arrow-icon.on {
   margin-top: 3rem;
   height: 30px;
   width: 200px;
+}
+
+#azimuth,
+#distance {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#azimuth h2,
+#distance h2 {
+  margin-bottom: 3rem;
+}
+
+#azimuth .points-details,
+#distance .points-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+#azimuth .points-details .first-point-details,
+#azimuth .points-details .second-point-details,
+#distance .points-details .first-point-details,
+#distance .points-details .second-point-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#azimuth .points-details .first-point-details label,
+#azimuth .points-details .second-point-details label,
+#distance .points-details .first-point-details label,
+#distance .points-details .second-point-details label {
+  margin: 1rem 0;
+}
+
+#azimuth .points-details .first-point-details input,
+#azimuth .points-details .second-point-details input,
+#distance .points-details .first-point-details input,
+#distance .points-details .second-point-details input {
+  height: 30px;
+  width: 200px;
+}
+
+#azimuth button,
+#distance button {
+  margin-top: 3rem;
+  height: 30px;
+  width: 120px;
+}
+
+#angles-calc {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  overflow: scroll;
+}
+
+#angles-calc h2 {
+  margin-bottom: 3rem;
+}
+
+#angles-calc .angles-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#angles-calc .angles-details .angle-choice {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+#angles-calc .angles-details .angle-choice span {
+  margin: 0 1rem;
+}
+
+#angles-calc .angles-details label {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+#angles-calc .angles-details input {
+  height: 30px;
+  width: 250px;
+}
+
+#angles-calc .angles-details button {
+  margin-top: 2rem;
 }
 /*# sourceMappingURL=main.css.map */
